# echo-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dummy.rs
src/: main.rs
static/databricks-templates/: mkdocs.yml  requirements.txt
static/databricks-templates/docs/: index.md
static/databricks-templates/docs/performance/: spark-dbsql-template.md  spark-job-template.md
static/databricks-templates/site/: 404.html  index.html
static/databricks-templates/site/performance/spark-dbsql-template/: index.html
static/databricks-templates/site/performance/spark-job-template/: index.html
static/databricks-templates/site/search/: search_index.json
