[package]
name = "echo-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "echo-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.15", features = ["tracing"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.12", features = ["limit", "buffer"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-macros = "0.3.7"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
lru_time_cache = "0.11.11"
serde_json = "1.0.95"

